# StoryBoatTTSGateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/paperboat_tts_gateway/: api_models.py  app.py  timing.py
src/paperboat_tts_gateway/providers/: __init__.py  base.py  edge_provider.py  kokoro_provider.py
src/storayboat_tts_gateway/: app.py
tests/: test_timing.py
